Adjusting header and contact

--- a/index.html
+++ b/index.html
@@ -5,28 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet", href="style.css">
-    <title> NAVIGATION </title>
+    <link rel="stylesheet", href="./Style/style.css">
+    <title> Tirta Styadi </title>
 </head>
 <body>
     <nav>
         <div class="logo">
-            <h4>
-            The Nav
-            </h4>
+            <h1>Tirta <span>STYADI</span></h1>
         </div>
         <ul class="nav-links">
             <li>
-                <a href="#">Home</a>
+                <a href="https://github.com/tirtasty">Gitlab</a>
             </li> 
             <li>
-                <a href="#">About</a>
+                <a href="https://www.linkedin.com/in/tirta-styadi-045810120/">LinkedIn</a>
             </li>
             <li>
-                <a href="#">Work</a>
-            </li>
-            <li>
-                <a href="#">Project</a>
+                <a href="./contact.html">Contact</a>
             </li>
             
         </ul>
@@ -36,7 +31,18 @@
             <div class="line3"></div>   
         </div>
     </nav>
-
-    <script src="app.js"></script>
+    <main></main>
+    <aside>
+        <h2>Sign up to Learn More!</h2>
+        <form>
+          <input type="text" placeholder="Name" />
+          <input type="text" placeholder="E-mail address" />
+          <button>Submit</button>
+        </form>
+      </aside>
+    <footer>
+        <span class="Footboot">Thanks for visiting!</span>
+    </footer>
+    <script src="./app.js"></script>
 </body>
 </html>
